--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,10 @@ body{
    flex-direction: column;
    
 }
+.box h1{
+    font-size: 27px;
+    /* margin-bottom: 15px; */
+}
 .box{
     order: 2;;
     width: 52%;
@@ -176,15 +180,16 @@ body{
    flex-direction: column;
    
 }
+
 .box{
     order: 2;;
-    width: 50%;
+    width: 43%;
     border-radius:0px 0px 8px 8px ;
 }
 img{
     order: 1;
-    width:50%;
-    height: 43vh;
+    width: 43%;
+    height: 34vh;
     border-radius:8px 8px 0px 0px ;
     
 }
